2024-09-22  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tfm.c: More strict check to interpret OFM FONTDIR
	as pTeX vertical writing.
	https://github.com/texjporg/tex-jp-build/issues/170#issuecomment-2295037307
	https://github.com/texjporg/tex-jp-build/issues/99
	* configure.ac: version 20240922.

2024-05-18  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvi.c: Remove obsolete comments.
	* dvipdfmx-upjf3.test, tests/upj{f,v}4_full.{vf,zvp0},
	tests/upjf-ipa.map, tests/Makefile_upjf, Makefile.am: Add
	a test for upTeX new encoding. It requires IPA MJ Mincho font.
	https://github.com/texjporg/tex-jp-build/issues/46

2024-05-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvi.c: Ensure enc_name "UTF16" prior to encoding conversion
	from UTF32 to UTF16.
	* dvipdfmx-upjf3.test, tests/upjf3.{tex,dvi},
	tests/upj{f,v}-h{u,i}.tfm,
	tests/upj{f,v}3_full.{vf,zvp0}, tests/upjf-noto.map,
	tests/Makefile_upjf, Makefile.am: Add a test for
	upTeX new encoding. It requires Noto Hentaigana fonts.
	https://github.com/texjporg/tex-jp-build/issues/46
	* configure.ac: version 20240511.

2024-04-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tfm.c: Fix segfaults.
	* dvipdfmx-upjf2.test, tests/UPJF-UTF16-{H,V},
	tests/upjf-hara.map: Update tests.
	https://github.com/texjporg/tex-jp-build/issues/46
	* configure.ac: version 20240429.

2024-04-27  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tfm.{c,h}, vf.c: Support upTeX new encoding
	for combining characters via virtual fonts.
	* cidtype2.c: Enable to treat Combining Katakana-Hiragana
	(Semi-)Voiced Sound Mark in cid_to_code().
	* dvipdfmx-upjf2.test, tests/upjf2.{tex,dvi}, tests/upj{f,v}.pl,
	tests/upj{f,v}-c.{pl,tfm}, tests/upjf1-r.{pl,tfm},
	tests/upj{f,v}2_full.{vf,zvp0}, tests/upjf{,-hara}.map,
	tests/Makefile_upjf, Makefile.am: Add a test for
	upTeX new encoding. It requires HaranoAji fonts.
	https://github.com/texjporg/tex-jp-build/issues/46
	* configure.ac: version 20240427.

2024-04-09  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
