@@ -7,9 +7,9 @@
 
 % for dvipdfmx
 %\AtBeginDvi{\special{pdf:mapline upjf-r UniJIS-UTF16-H HaranoAjiMincho-Regular.otf}}
-%\AtBeginDvi{\special{pdf:mapline upjf-g UniJIS-UTF16-H HaranoAjiGothic-Regular.otf}}
+%\AtBeginDvi{\special{pdf:mapline upjf-g UniJIS-UTF16-H HaranoAjiGothic-Normal.otf}}
 %\AtBeginDvi{\special{pdf:mapline upjv-r UniJIS-UTF16-V HaranoAjiMincho-Regular.otf}}
-%\AtBeginDvi{\special{pdf:mapline upjv-g UniJIS-UTF16-V HaranoAjiGothic-Regular.otf}}
+%\AtBeginDvi{\special{pdf:mapline upjv-g UniJIS-UTF16-V HaranoAjiGothic-Normal.otf}}
 %\AtBeginDvi{\special{pdf:mapline upjf-r UniJIS-UTF16-H !Ryumin-Light}}
 %\AtBeginDvi{\special{pdf:mapline upjf-g UniJIS-UTF16-H !GothicBBB-Medium}}
 %\AtBeginDvi{\special{pdf:mapline upjv-r UniJIS-UTF16-V !Ryumin-Light}}
